# pmfe

./: .gitignore  AUTHORS  BBpolytope.py  Dockerfile  GTrunner.py  GTscorer.py  GTsetMBparam.py  Makefile  README  README.md  RNAscorer.py  __init__.py  iB4erunner.py  output.template  parameterizer.py  parametrizer.py  rna_poly.py  scorer.py  test.cc  test_GTrunner.py  test_RNAscorer.py  test_iB4erunner.py  tree.py
gtfold-mfe/: Makefile.in  README  configure.in
gtfold-mfe/data/RNAParams/: Makefile.am
gtfold-mfe/data/UNAParams/: Makefile.am  Makefile.in
gtfold-mfe/src/: Makefile.am  Makefile.in  boltzmann_main.cc  energy.c  global.cc  mfe_main.cc  pf-shel-check.cc  subopt_traceback.cc
gtmfe/: AUTHORS  Makefile  __init__.py  gtmfe-shared.i  gtmfe-with-openmp.cc  gtmfe-with-openmp.i  gtmfe-with-openmp_wrap.cxx  gtmfe-without-openmp.cc  gtmfe-without-openmp.i  gtmfe-without-openmp_wrap.cxx  gtmfe.py  setup-with-openmp.py  setup-without-openmp.py  swig-with-openmp.sh  swig-without-openmp.sh
iB4e/: 3cube_optimize.cc  BBPolytope.h  BBpolytope.cc  BBpolytope.h  Makefile  __init__.py  compile_iB4e  compile_iB4e_osx  config.h  euclideanvector.cc  euclideanvector.h  faces.cc  faces.h  iB4e  iB4e.i  iB4e.py  iB4e_wrap.cxx  iB4e_wrap.h  linalg.cc  linalg.h  main.cc  pairwise.h  setup.py  stack.cc  stack.h  swig.sh
include/: algorithms.h  constants.h  data.h  energy.h  global.h  iB4e.h  interval_tree.h  loader.h  mfe.h  mfe_main.h  minbox.h  nndb_constants.h  nntm.h  parametrizer_types.h  pmfe_types.h  rational.h  rna_polytope.h  subopt.h  thread_pool.h
pmfe/: Makefile
(+682 files in other folders)
