## Process this file with automake to produce Makefile.in

gtfold_datadir = $(datadir)/@PACKAGE@/RNAParams

gtfold_data_DATA = \
	stack.DAT\
	miscloop.DAT\
	dangle.DAT\
	loop.DAT\
	int11.DAT\
	int21.DAT\
	int22.DAT\
	tloop.DAT\
	tstackh.DAT\
	tstacki.DAT\
	tstacke.DAT\
	tstackm.DAT


EXTRA_DIST = $(gtfold_data_DATA)

CLEANFILES = *~

