## Process this file with automake to produce Makefile.in

gtfold_datadir = $(datadir)/@PACKAGE@/UNAParams

gtfold_data_DATA = \
	stack.DAT\
	miscloop.DAT\
	dangle.DAT\
	loop.DAT\
	asint1x2.DAT\
	sint2.DAT\
	sint4.DAT\
	tloop.DAT\
	tstackh.DAT\
	tstacki.DAT\
	tstackm.DAT\
	tstacke.DAT\
	tstacki23.DAT


EXTRA_DIST = $(gtfold_data_DATA)

CLEANFILES = *~

